[gd_scene load_steps=19 format=3 uid="uid://tkda2d5ltimj"]

[ext_resource type="Script" uid="uid://2oqla3xoti0v" path="res://scripts/game_script.gd" id="1_7ppem"]
[ext_resource type="PackedScene" uid="uid://c5ilww7qcywl6" path="res://scenes/background.tscn" id="1_hwhcm"]
[ext_resource type="PackedScene" uid="uid://cwkjpvfobul02" path="res://scenes/player.tscn" id="1_wtg0b"]
[ext_resource type="PackedScene" uid="uid://csp750gxssdwu" path="res://scenes/game_wall_left.tscn" id="3_3wlaf"]
[ext_resource type="Texture2D" uid="uid://js85r8xe05w2" path="res://visual_assets/bg_02.jpg" id="3_6nks4"]
[ext_resource type="Script" uid="uid://bpsbn0p6dmagd" path="res://scripts/score_script.gd" id="3_7ppem"]
[ext_resource type="PackedScene" uid="uid://chkk7n4304unv" path="res://scenes/pause_menu.tscn" id="4_ch7hq"]
[ext_resource type="PackedScene" uid="uid://c3gxfi3hvujbv" path="res://scenes/game_wall_right.tscn" id="4_ckujl"]
[ext_resource type="PackedScene" uid="uid://x28dwmc5ukym" path="res://scenes/camera_2d.tscn" id="5_3wlaf"]
[ext_resource type="AudioStream" uid="uid://dcj7ogyxqcfql" path="res://visual_assets/sounds/level_start.mp3" id="6_h0jvr"]
[ext_resource type="FontFile" uid="uid://bjsta0phwk7f5" path="res://visual_assets/fonts/8bit_wonder/8-BIT WONDER.TTF" id="7_6vdah"]
[ext_resource type="Script" uid="uid://fhqaysrsk2we" path="res://scripts/message_label_script.gd" id="7_ckujl"]
[ext_resource type="AudioStream" uid="uid://b67kdk87ppyk4" path="res://visual_assets/sounds/space_theme.ogg" id="7_xutp7"]
[ext_resource type="AudioStream" uid="uid://cyjcsn8qfuy81" path="res://visual_assets/sounds/game_over.ogg" id="8_to4ff"]
[ext_resource type="AudioStream" uid="uid://crrd7n8cg3k5k" path="res://visual_assets/sounds/difficulty_ramp_up.mp3" id="9_4j0yi"]
[ext_resource type="AudioStream" uid="uid://5hdwtxlvictd" path="res://visual_assets/sounds/level_complete.mp3" id="10_to4ff"]
[ext_resource type="PackedScene" uid="uid://daxadn4m4ifky" path="res://scenes/enemy.tscn" id="17_6nks4"]

[sub_resource type="Curve2D" id="Curve2D_6nks4"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 190, 280, 0, 0, 0, 0, 1090, 280, 0, 0, 0, 0, 1090, 350, 0, 0, 0, 0, 190, 350, 0, 0, 0, 0, 190, 430, 0, 0, 0, 0, 1090, 430, 0, 0, 0, 0, 1090, 350, 0, 0, 0, 0, 190, 350, 0, 0, 0, 0, 190, 280)
}
point_count = 9

[node name="Game" type="Node2D"]
script = ExtResource("1_7ppem")
camera_path = NodePath("Camera2D")
level_name = "Level 2"
level_nb = 2
metadata/_edit_horizontal_guides_ = [-30.0]

[node name="Background" parent="." instance=ExtResource("1_hwhcm")]
texture = ExtResource("3_6nks4")

[node name="game_wall_left" parent="." groups=["walls"] instance=ExtResource("3_3wlaf")]
position = Vector2(29, 374)
collision_layer = 8

[node name="game_wall_right" parent="." groups=["walls"] instance=ExtResource("4_ckujl")]
position = Vector2(1250, 375)
collision_layer = 8

[node name="Player" parent="." groups=["Player"] instance=ExtResource("1_wtg0b")]
position = Vector2(640, 655)
collision_mask = 13

[node name="enemy_path" type="Path2D" parent="."]
curve = SubResource("Curve2D_6nks4")

[node name="PathFollow2D" type="PathFollow2D" parent="enemy_path"]
position = Vector2(190, 280)
rotates = false

[node name="Enemy" parent="enemy_path/PathFollow2D" groups=["Enemy"] instance=ExtResource("17_6nks4")]
position = Vector2(1, 0)

[node name="music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_xutp7")
volume_db = -12.0
autoplay = true

[node name="death_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_to4ff")
volume_db = -5.0

[node name="difficulty_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_4j0yi")
volume_db = -5.0

[node name="level_complete_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_to4ff")

[node name="level_start_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_h0jvr")

[node name="game_over_label" type="Label" parent="."]
visible = false
z_index = 5
offset_left = 190.0
offset_top = 190.0
offset_right = 1090.0
offset_bottom = 290.0
theme_override_fonts/font = ExtResource("7_6vdah")
theme_override_font_sizes/font_size = 100
text = "GAME OVER"

[node name="restart_label" type="Label" parent="game_over_label"]
visible = false
layout_mode = 0
offset_left = 140.0
offset_top = 115.0
offset_right = 755.0
offset_bottom = 145.0
theme_override_fonts/font = ExtResource("7_6vdah")
theme_override_font_sizes/font_size = 30
text = "Press space to restart"

[node name="game_over_timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/GUI"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 60.0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/GUI/MarginContainer"]
layout_direction = 3
layout_mode = 2

[node name="score" type="Label" parent="CanvasLayer/GUI/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.952941, 0.756863, 0, 1)
theme_override_colors/font_shadow_color = Color(0.584314, 0.0235294, 0.454902, 1)
theme_override_fonts/font = ExtResource("7_6vdah")
theme_override_font_sizes/font_size = 25
text = "0"
script = ExtResource("3_7ppem")

[node name="message_label" type="Label" parent="CanvasLayer/GUI"]
layout_mode = 1
offset_right = 1280.0
offset_bottom = 720.0
theme_override_colors/font_color = Color(0.952941, 0.756863, 0, 1)
theme_override_colors/font_shadow_color = Color(0.584314, 0.0235294, 0.454902, 1)
theme_override_fonts/font = ExtResource("7_6vdah")
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("7_ckujl")

[node name="pause_menu" parent="CanvasLayer" instance=ExtResource("4_ch7hq")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -620.0
offset_top = -340.0
offset_right = 620.0
offset_bottom = 340.0

[node name="Camera2D" parent="." instance=ExtResource("5_3wlaf")]
zoom = Vector2(1, 1)
limit_top = 0
limit_bottom = 720
player_path = NodePath("../Player")

[connection signal="player_died" from="Player" to="." method="_on_player_player_died"]
[connection signal="timeout" from="game_over_timer" to="." method="_on_game_over_timer_timeout"]
